--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Sebastian Pech <sebastian.pech@me.com>"]
 version = "0.1.0"
 
 [deps]
+Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Decimals = "abce61dc-4473-55a0-ba07-351d65e31d42"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
